--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.27",
         "bootstrap": "^5.2.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
+        "sass-loader": "^12.1.0",
         "vite": "^3.0.0",
-        "vue": "^3.2.37"
+        "vue": "^2.0.1",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.1.18"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.22.0",
+        "vue": "^3.2.39",
         "vue-axios": "^3.4.1",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.0.13"
     }
 }
